<resources>
    <string name="app_name">Signup</string>
    <string name="sign_up">Sign Up</string>
    <string name="name_hint">name</string>
    <string name="email_hint">email</string>
    <string name="password_hint">password</string>
    <string name="username_hint">username</string>
    <string name="sign_up_button">Sign Up</string>
    <string name="login">Login</string>
    <string name="login_button">Login</string>
    <string name="welcome_to_our_app">Welcome To Our App!</string>
</resources>